// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple levels 1`] = `
<span>
  <nav
    class="svelte-aeg211"
  >
    <ol />
  </nav>
  <!--&lt;BreadCrumb&gt;-->
   
  <ul
    class="svelte-1i7sfgn"
  >
    <li
      class="svelte-1i7sfgn isCurrent"
    >
      <div
        class="svelte-1i7sfgn"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          architecture
        </span>
        Component #3
      </div>
       
    </li>
    <li
      class="svelte-1i7sfgn isCurrent"
    >
      <div
        class="svelte-1i7sfgn folder"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          folder_open
        </span>
        Folder A
      </div>
       
    </li>
    <li
      class="svelte-1i7sfgn isCurrent"
    >
      <div
        class="svelte-1i7sfgn folder"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          folder_open
        </span>
        Folder D
      </div>
       
    </li>
  </ul>
  <!--&lt;ToolGroup&gt;-->
  <!--&lt;Explorer&gt;-->
</span>
`;

exports[`Single level 1`] = `
<span>
  <nav
    class="svelte-aeg211"
  >
    <ol />
  </nav>
  <!--&lt;BreadCrumb&gt;-->
   
  <ul
    class="svelte-1i7sfgn"
  >
    <li
      class="svelte-1i7sfgn isCurrent"
    >
      <div
        class="svelte-1i7sfgn"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          architecture
        </span>
        Component #1
      </div>
       
    </li>
    <li
      class="svelte-1i7sfgn isCurrent"
    >
      <div
        class="svelte-1i7sfgn"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          architecture
        </span>
        Component #2
      </div>
       
    </li>
    <li
      class="svelte-1i7sfgn isCurrent"
    >
      <div
        class="svelte-1i7sfgn"
      >
        <span
          class="material-icons symbol svelte-1i7sfgn"
        >
          architecture
        </span>
        Component #3
      </div>
       
    </li>
  </ul>
  <!--&lt;ToolGroup&gt;-->
  <!--&lt;Explorer&gt;-->
</span>
`;
